New generic page and styles.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 <body>
    <main>
         <h1>CONVERTER</h1>
-        
+        <div id="menu">
+            <div class="main-menu-row">
+                  <img class="main-menu-icon" src="" alt="Weight">
+                  <img class="main-menu-icon" src="" alt="Length">
+            </div>
+            <div class="main-menu-row">
+               <img class="main-menu-icon" src="" alt="Temperature">
+               <img class="main-menu-icon" src="" alt="Coin">
+         </div>
+        </div>
    </main>
 </body>
 </html>
