--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Converter</title>
-<link href="styles.css" rel="general" type="text/css">
+<link href="css/general.css" rel="stylesheet" type="text/css">
+<link href="css/menu.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -11,15 +12,25 @@
    <main>
         <h1>CONVERTER</h1>
         <div id="menu">
-            <div class="main-menu-row">
-                  <img class="main-menu-icon" src="" alt="Weight">
-                  <img class="main-menu-icon" src="" alt="Length">
+            <div>
+                  <a href="#"></a><div class="main-menu-row">
+                        <img id="weigth" src="img/Icon_Weigth.png" alt="Weight">
+                  </div></a>
+                  <a href="#"></a><div class="main-menu-row">
+                        <img id="coin" src="img/Icon_Coin.png" alt="Coin">
+                  </div></a>
             </div>
-            <div class="main-menu-row">
-               <img class="main-menu-icon" src="" alt="Temperature">
-               <img class="main-menu-icon" src="" alt="Coin">
+            <div>
+                  <a href="#"></a><div class="main-menu-row">
+                        <img id="length" src="img/Icon_Length.png" alt="Length">
+                  </div></a>
+                  <a href="#"><div class="main-menu-row">
+                        <img id="temperature" src="img/Icon_Temperature.png" alt="Temperature">
+                  </div></a>
+                  
          </div>
         </div>
    </main>
+   <script src="js/"></script>
 </body>
-</html>
+</html
