- Updating branches - Created a new file structure for the new system - Renamed all the existing paths to addapt to the new system

--- a/coverter-generic.html
+++ b/coverter-generic.html
@@ -3,18 +3,18 @@
 <head>
 <meta charset="utf-8">
 <title>Converter</title>
-<link href="css/general.css" rel="stylesheet" type="text/css">
+<link href="assets/css/general.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
    <main>
-        <h1>CONVERTER</h1>
+        <h1>OLGA'S CONVERTER</h1>
         <div id="converter">
             <div class="bg">
                 <div class="flex line">
                     <input type="text" id="convertible">
-                    <p id="measure"></p>
+                    <p id="measure">lb</p>
                 </div>
             </div>
             <div class="bg-transparent flex">
@@ -27,7 +27,7 @@
                           </select>
                     </div>
                 </div>
-                <div><img src="img/Arrow.png" alt="Arrow"></div>
+                <div><img src="assets/img/Arrow.png" alt="Arrow"></div>
                 <div>
                     <p>TO</p>
                     <div class="bg">
