- Added click-and-changed-to-new-page function to     weight

--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
          </div>
         </div>
    </main>
-   <script src="js/"></script>
+   <script src="assets/js/general.js"></script>
 </body>
 </html>
