--- a/converter-generic.html
+++ b/converter-generic.html
@@ -40,6 +40,6 @@
             </div>
         </div>
    </main>
-   <script src="js/"></script>
+   <script src="assets/js/general.js"></script>
 </body>
 </html
