--- a/coverter-generic.html
+++ b/coverter-generic.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>Converter</title>
-<link href="css/general.css" rel="stylesheet" type="text/css">
+<link href="assets/css/general.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
    <main>
-        <h1>CONVERTER</h1>
+        <h1>OLGA'S CONVERTER</h1>
         <div id="converter">
             <div class="bg">
                 <div class="flex line">
@@ -24,16 +24,18 @@
                         <select name="measures" class="selector">
                             <option value="pounds">lb</option>
                             <option value="kilos">kg</option>
+                            <option value="toneladas">t</option>
                           </select>
                     </div>
                 </div>
-                <div><img src="img/Arrow.png" alt="Arrow"></div>
+                <div><img id="arrow" src="assets/img/Arrow.png"></div>
                 <div>
                     <p>TO</p>
                     <div class="bg">
                         <select name="measures" class="selector">
                             <option value="pounds">lb</option>
                             <option value="kilos">kg</option>
+                            <option value="kilos">t</option>
                           </select>
                     </div>
                 </div>
@@ -42,4 +44,4 @@
    </main>
    <script src="js/"></script>
 </body>
-</html
+</html>
