-Added more styling

--- a/coverter-generic.html
+++ b/coverter-generic.html
@@ -12,7 +12,7 @@
         <h1>OLGA'S CONVERTER</h1>
         <div id="converter">
             <div class="bg">
-                <div class="flex line">
+                <div class="flex line-dark">
                     <input type="text" id="convertible">
                     <p id="input"></p>
                 </div>
@@ -43,7 +43,7 @@
             <div id="button" class="pointer">
                 <p class="button">CONVERT</p>
             </div>
-            <div class="flex line">
+            <div class="flex line-light">
                 <p id="result"></p>
                 <p id="output"></p>
             </div>
