- Refactored the convert function from if-else logic to switch logic - Added weightConverter js file that converts all the weights units - Added distanceConverter js file that converts all the distances units (logic not implemented) - Added tempetureConverter js file that converts all the temperature units (logic not implemented) - importing all the weigh convertion function into the convert js file - Change the convert.js type as module for allowing import statement

--- a/coverter-generic.html
+++ b/coverter-generic.html
@@ -49,6 +49,6 @@
             </div>
         </div>
    </main>
-   <script src="assets/js/converter.js"></script>
+   <script type="module" src="assets/js/converter.js"></script>
 </body>
 </html>
