--- a/weight_converter.html
+++ b/weight_converter.html
@@ -49,6 +49,6 @@
             </div>
         </div>
    </main>
-   <script src="assets/js/converter.js"></script>
+   <script type="module" src="assets/js/converter.js"></script>
 </body>
 </html>
