- Corrected name of temperatureConverter - Added the necessary type for the script in the temperature_converter.html - Added the cases for temperature in the switch in converter.js - Refactured the functions of the temperature conversion

--- a/temperature_converter.html
+++ b/temperature_converter.html
@@ -22,9 +22,9 @@
                     <p>FROM</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="from">
-                            <option class="value" value="C">C</option>
-                            <option class="value" value="F">F</option>
-                            <option class="value" value="K">K</option>
+                            <option class="value" value="ºC">ºC</option>
+                            <option class="value" value="ºF">ºF</option>
+                            <option class="value" value="ºK">ºK</option>
                           </select>
                     </div>
                 </div>
@@ -33,9 +33,9 @@
                     <p>TO</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="to">
-                            <option class="value" value="C">C</option>
-                            <option class="value" value="F">F</option>
-                            <option class="value" value="K">K</option>
+                            <option class="value" value="ºC">ºC</option>
+                            <option class="value" value="ºF">ºF</option>
+                            <option class="value" value="ºK">ºK</option>
                           </select>
                     </div>
                 </div>
@@ -49,6 +49,6 @@
             </div>
         </div>
    </main>
-   <script src="assets/js/converter.js"></script>
+   <script type="module" src="assets/js/converter.js"></script>
 </body>
 </html>
