- Make annotations for an idea/plan

--- a/weight_converter.html
+++ b/weight_converter.html
@@ -22,7 +22,7 @@
                     <p>FROM</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="from">
-                            <option class="value" value="lb">lb</option>
+                            <option class="value" value="lb" selected>lb</option>
                             <option class="value" value="kg">kg</option>
                             <option class="value" value="t">t</option>
                           </select>
@@ -34,7 +34,7 @@
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="to">
                             <option class="value" value="lb">lb</option>
-                            <option class="value" value="kg">kg</option>
+                            <option class="value" value="kg" selected>kg</option>
                             <option class="value" value="t">t</option>
                           </select>
                     </div>
