- Added "default" and "disabled" to html options - Added let variables for the actual option in the select - Added logic for attribute management when event trigers

--- a/length_converter.html
+++ b/length_converter.html
@@ -22,8 +22,8 @@
                     <p>FROM</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="from">
-                            <option class="value" value="m">m</option>
-                            <option class="value" value="ft">ft</option>
+                            <option class="value" value="m" selected>m</option>
+                            <option class="value" value="ft" disabled>ft</option>
                             <option class="value" value="yd">yd</option>
                           </select>
                     </div>
@@ -33,8 +33,8 @@
                     <p>TO</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="to">
-                            <option class="value" value="m">m</option>
-                            <option class="value" value="ft">ft</option>
+                            <option class="value" value="m" disabled>m</option>
+                            <option class="value" value="ft" selected>ft</option>
                             <option class="value" value="yd">yd</option>
                           </select>
                     </div>
