--- a/temperature_converter.html
+++ b/temperature_converter.html
@@ -22,8 +22,8 @@
                     <p>FROM</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="from">
-                            <option class="value" value="ºC">ºC</option>
-                            <option class="value" value="ºF">ºF</option>
+                            <option class="value" value="ºC" selected>ºC</option>
+                            <option class="value" value="ºF" disabled>ºF</option>
                             <option class="value" value="ºK">ºK</option>
                           </select>
                     </div>
@@ -33,8 +33,8 @@
                     <p>TO</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="to">
-                            <option class="value" value="ºC">ºC</option>
-                            <option class="value" value="ºF">ºF</option>
+                            <option class="value" value="ºC" disabled>ºC</option>
+                            <option class="value" value="ºF" selected>ºF</option>
                             <option class="value" value="ºK">ºK</option>
                           </select>
                     </div>
