--- a/weight_converter.html
+++ b/weight_converter.html
@@ -23,7 +23,7 @@
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="from">
                             <option class="value" value="lb" selected>lb</option>
-                            <option class="value" value="kg">kg</option>
+                            <option class="value" value="kg" disabled>kg</option>
                             <option class="value" value="t">t</option>
                           </select>
                     </div>
@@ -33,7 +33,7 @@
                     <p>TO</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="to">
-                            <option class="value" value="lb">lb</option>
+                            <option class="value" value="lb" disabled>lb</option>
                             <option class="value" value="kg" selected>kg</option>
                             <option class="value" value="t">t</option>
                           </select>
