- Added the db.json for mocking the currency server - Added the request.js code for requesting the euro currency - Modified the coin_converter.html page to the currency values

--- a/coin_converter.html
+++ b/coin_converter.html
@@ -22,9 +22,9 @@
                     <p>FROM</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="from">
-                            <option class="value" value="lb">lb</option>
-                            <option class="value" value="kg">kg</option>
-                            <option class="value" value="t">t</option>
+                            <option class="value" value="euro">euro</option>
+                            <option class="value" value="dollar">dollar</option>
+                            <option class="value" value="pound">pound</option>
                           </select>
                     </div>
                 </div>
@@ -33,9 +33,9 @@
                     <p>TO</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="to">
-                            <option class="value" value="lb">lb</option>
-                            <option class="value" value="kg">kg</option>
-                            <option class="value" value="t">t</option>
+                            <option class="value" value="euro">euro</option>
+                            <option class="value" value="dollar">dollar</option>
+                            <option class="value" value="pound">pound</option>
                           </select>
                     </div>
                 </div>
@@ -49,6 +49,6 @@
             </div>
         </div>
    </main>
-   <script src="assets/js/converter.js"></script>
+   <script type="module" src="assets/js/converter.js"></script>
 </body>
 </html>
