- Added variables for dollar and pound rates and their corresponding functions to fetch the data - Added all currency cases for dollars and pounds - Added logic for the convertion of dollars and pounds in currencyConverter - Changed and corrected select values and selected/disabled in coin html

--- a/coin_converter.html
+++ b/coin_converter.html
@@ -22,9 +22,9 @@
                     <p>FROM</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="from">
-                            <option class="value" value="euro">euro</option>
-                            <option class="value" value="dollar">dollar</option>
-                            <option class="value" value="pound">pound</option>
+                            <option class="value" value="€" selected>€</option>
+                            <option class="value" value="$" disabled>$</option>
+                            <option class="value" value="£">£</option>
                           </select>
                     </div>
                 </div>
@@ -33,9 +33,9 @@
                     <p>TO</p>
                     <div class="bg-selector">
                         <select name="measures" class="selector pointer" id="to">
-                            <option class="value" value="euro">euro</option>
-                            <option class="value" value="dollar">dollar</option>
-                            <option class="value" value="pound">pound</option>
+                            <option class="value" value="€" disabled>€</option>
+                            <option class="value" value="$" selected>$</option>
+                            <option class="value" value="£">£</option>
                           </select>
                     </div>
                 </div>
