- Massive changes in styling

--- a/length_converter.html
+++ b/length_converter.html
@@ -4,12 +4,16 @@
 <meta charset="utf-8">
 <title>Converter</title>
 <link href="assets/css/general.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-   <main>
-        <h1>OLGA'S CONVERTER</h1>
+    <div id="logo">
+		<img src="assets/img/NMC_Logo.png" alt="Neko's Magic Converter">
+    </div>
+    <main>
+        <h1 class="page-title">Length Converter</h1>
         <div id="converter">
             <div class="bg">
                 <div class="flex line-dark">
@@ -48,7 +52,10 @@
                 <p id="output"></p>
             </div>
         </div>
-   </main>
+    </main>
+    <footer>
+        <p class="singular-page">Made with <i class="fa fa-heart"></i> by Olga Ortiz</p>
+    </footer>
    <script type="module" src="assets/js/converter.js"></script>
 </body>
 </html>
