- Adapted css to mobile and tablet devices - Corrected various malfunctions

--- a/temperature_converter.html
+++ b/temperature_converter.html
@@ -6,6 +6,8 @@
 <title>Neko's Magic Converter</title>
 <link href="assets/css/general.css" rel="stylesheet" type="text/css">
 <link href="assets/css/converter.css" rel="stylesheet" type="text/css">
+<link href="assets/css/general-media.css" rel="stylesheet" type="text/css">
+<link href="assets/css/converter-media.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -127,7 +129,7 @@
 					</g>
 				</svg>
 			</div>
-			<div class="cat-hover">
+			<div class="cat-hover cat-selected">
 				<svg id="temperature" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 101.85 120.5">
 					<g id="Cat_Fill" data-name="Cat Fill">
 					  <path class="cat-interior" d="M100.25,91.45c-.37-.42-.73-.84-1.08-1.26,1.61-2.23,1.27-3.93,.64-5-.29-.49-.59-.93-.91-1.34,1.94-2.52,.93-5.96-.67-8.29-.33-.48-.69-.94-1.05-1.4-.81-1.03-1.58-2-1.91-3.18l-.16-.57c-.21-.72-.41-1.39-.49-2.06-.23-1.93-.91-3.57-2.01-4.86-1.58-1.85-2.84-3.43-3.97-4.97-.78-1.07-1.61-1.67-2.54-1.82-.55-1.49-1.59-2.84-2.57-3.87,1.23-1.78,1.56-3.66,.93-5.38-.28-.77-.51-1.55-.75-2.38-.19-.65-.38-1.31-.59-1.95-.22-.65-.57-1.2-.92-1.74-.72-1.12-1.07-1.75-.59-2.71,.29-.59,.36-1.22,.42-1.78,.01-.14,.03-.29,.05-.43,.83-6.14,.23-12.16-.58-18.84-.02-.19-.04-.41-.06-.63-.09-1.13-.23-2.75-1.34-3.83,.46-1.59,.35-3.26-.34-5-.71-1.8-2.25-2.64-4.22-2.3-.58,.1-.83,.04-1.05-.1-3.69-2.25-7.89-3.72-13.21-4.64-.62-.11-1.25-.22-1.87-.33-2.87-.51-5.83-1.05-8.87-1.13-3.67-.1-7.93,.26-11.52,3.8-3.74,3.68-5.97,7.32-7,11.44-.29,1.14-.34,2.3-.39,3.5-.04,.82-.04,1.65-.04,2.47,0,1.63,0,3.16-.27,4.7-.03,.17-.04,.33-.04,.49-1.24,1.24-1.78,2.72-2.29,4.16-.13,.36-.25,.72-.39,1.08-.6,1.53-1.22,3.06-1.83,4.58-1.61,4-3.28,8.13-4.65,12.31-.37,1.12-.93,2.16-1.51,3.26-.83,1.55-1.69,3.15-2.02,5.04-.15,.86-.42,1.7-.71,2.59-.29,.9-.59,1.84-.76,2.81-.13,.71-.56,1.25-1.06,1.86-.47,.58-1,1.24-1.3,2.12l-.4,1.16c-1.35,3.9-2.75,7.94-3.34,12.15-.72,.18-1.59,.27-2.39,.34-.41,.04-.8,.08-1.15,.12-3.63,.48-5.4,1.42-5.65,5.46-.17,2.77-.14,5.71,.69,8.43-2.01,1.2-3.02,3.1-2.85,5.43,.33,4.56,1.44,8.41,3.4,11.74,2.54,4.33,6.81,5.47,10.66,6,3.75,.52,7.55,.46,11.23,.41,1.77-.03,3.6-.06,5.39-.02,5.16,.11,10.22,.61,16.25,1.32l.88,.11c2.86,.34,5.84,.69,8.79,.68h2.11c5.77-.06,11.75-.1,17.56,.68,.09,.01,.18,.02,.28,.02,.49,0,.98-.16,1.41-.31,.07-.02,.14-.05,.21-.07,1.29,.9,2.76,1.36,4.38,1.36,.17,0,.34,0,.51-.02,3.46-.2,6.81-.84,10.22-1.54l.44-.09c1.72-.34,3.49-.7,5.13-1.76,2.59-1.68,3.07-3.35,3.02-4.46-.04-.87-.46-2.06-1.97-3.2,2.72-3.19,3.14-7.4,1.13-11,.9-.88,1.4-1.79,1.52-2.77,.17-1.41-.47-2.9-1.94-4.57Z"/>
