--- a/weight_converter.html
+++ b/weight_converter.html
@@ -6,6 +6,8 @@
 <title>Neko's Magic Converter</title>
 <link href="assets/css/general.css" rel="stylesheet" type="text/css">
 <link href="assets/css/converter.css" rel="stylesheet" type="text/css">
+<link href="assets/css/general-media.css" rel="stylesheet" type="text/css">
+<link href="assets/css/converter-media.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -59,7 +61,7 @@
     </main>
     <footer>
         <div class="horizontal-menu">
-            <div class="cat-hover">
+            <div class="cat-hover cat-selected">
 				<svg id="weight" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 149.98 120.5">
 					<defs>
 						<linearGradient id="my-gradient" x1="0" x2="0" y1="0" y2="1">
