--- a/coin_converter.html
+++ b/coin_converter.html
@@ -6,6 +6,8 @@
 <title>Neko's Magic Converter</title>
 <link href="assets/css/general.css" rel="stylesheet" type="text/css">
 <link href="assets/css/converter.css" rel="stylesheet" type="text/css">
+<link href="assets/css/general-media.css" rel="stylesheet" type="text/css">
+<link href="assets/css/converter-media.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -173,7 +175,7 @@
 					</g>
 				</svg>
 			</div>
-			<div class="cat-hover">
+			<div class="cat-hover cat-selected">
 				<svg id="coin" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120.5 128.88">
 					<g id="Cat_Fill" data-name="Cat Fill">
 					  <path class="cat-interior" d="M118.84,104.52c-2.07-1.16-4.2-1.37-6.02-1.42-2.43-.06-4.9-.05-7.28-.03h-2.31c-2.37,.01-4.77-.4-7.41-1.27-.9-.3-1.8-.6-2.7-.91-5.05-1.72-10.26-3.48-15.71-3.79,0-.2,0-.4,0-.61-.16-4.13-1.16-8.21-2.97-12.13-2.95-6.36-7.43-12.06-13.71-17.42-.22-.19-.44-.39-.67-.6-.87-.78-1.83-1.65-2.99-2.17,.79-3.52,1.18-7.12,1.51-10.34,.15-1.43,.26-2.86,.37-4.3,.17-2.11,.34-4.29,.62-6.42,.62-4.75,2.36-8.07,5.49-10.45,.4-.3,3.86-3.03,2.77-5.09-.31-.73-.79-1.04-1.14-1.17,0,0,0,0,0,0-.01-.09-.02-.18-.02-.23-.09-2.75-1.44-5.09-3.61-6.26-2.19-1.18-4.92-1.02-7.3,.43l-.12,.08c-.07,.04-.16,.1-.13,.1-1.93-.14-4.39,.49-5.09,4.34-.15,.8-.38,1.22-.91,1.6-1.47,1.08-2,2.84-1.39,4.61,.15,.45,.02,.86-.23,1.55-.14,.39-.3,.84-.38,1.33-.07,.47-.13,.93-.19,1.4-.22,1.74-.43,3.38-1.03,4.94-.32,.84-.86,1.88-1.62,2.08-.74,.19-1.7-.43-2.37-.98-1.79-1.48-2.99-3.43-4.25-5.63-.16-.28-.43-.61-.72-.96,1.34-1.85,2.1-4.02,2.15-6.22,.07-3.41-.11-7.41-2.04-11.17-.01-.09,.04-.46,.3-1,1.11-2.34,1.47-4.79,1.68-6.89,.24-2.43-.14-4.87-1.08-6.87-.76-1.62-1.99-2.67-3.46-2.96-1.51-.29-3.13,.25-4.43,1.47-2.02,1.89-3.35,4.25-4.63,6.53l-.61,1.07c-.42,.72-.82,1.46-1.23,2.19-2.62-.68-5.75-.21-8.1,.22-1.64-2.76-3.78-6.1-6.1-8.19-1.01-.91-2.41-1.95-4.35-1.95h0C3.12,1.04,1.67,2.19,1.06,4.47c-.83,3.11-.43,6.15-.04,9.08l.16,1.21c.41,3.27,.22,5.9-.6,8.27-1.71,4.99-1.14,9.71,1.75,14.46,1.69,2.77,3.53,6.11,4.45,9.93,.15,.64,.14,1.32,.13,2.04v.59c0,4.02,.2,9.3,1.74,14.54,.71,2.41,1.34,4.77,1.3,7.26,0,.28,.08,.6,.21,.99-1.14,1.48-1.9,3.34-2.23,5.59-.32,2.13,1.02,5.02,2.71,6.27-1.06,3.5-1.5,7.31-1.26,11.06,.28,4.28,1.42,8.41,3.51,12.63,.76,1.54,1.66,2.96,2.69,4.27-.92,1.47-1.27,3.06-.94,4.38,.26,1.05,.94,1.86,1.95,2.32,.8,.37,2.66,1.23,4.81,1.23,1.04,0,2.14-.22,3.23-.77,1.58,.65,3.23,.98,4.95,.98,1.91,0,3.91-.4,6.03-1.2,.58-.22,1.12-.48,1.63-.77,3.03,1.08,5.98,.77,8.17-.9,2.34-1.78,4.32-2.15,6.62-1.22,.21,.08,.43,.14,.65,.19,.04,0,.08,.02,.13,.03-.12,.17-.41,.41-.54,.52-.78,.66-1.65,1.2-2.57,1.78-.76,.47-1.54,.96-2.28,1.52-1.69,1.29-1.99,2.58-1.93,3.42,.08,1.26,.93,2.37,2.52,3.3,2.63,1.53,5.38,1.79,7.79,1.79,.16,0,.31,0,.47,0,3.9-.05,6.77-1.51,8.53-4.36,1.48-2.39,3.2-4.69,4.87-6.91,1.24-1.65,2.53-3.36,3.71-5.12l.1-.15c.26-.39,.48-.72,.78-.85,3.11-1.33,6.06-1.43,9-.33,3.11,1.17,6.7,1.66,10.96,1.49,1.3-.05,2.61-.09,3.92-.13,4.25-.12,8.65-.25,12.96-.82l.3-.04c2.49-.33,5.07-.67,7.47-2.04,1.69-.96,2.04-2.03,2.03-2.76,0-.73-.36-1.79-2.04-2.73Z"/>
