--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <title>Neko's Magic Converter</title>
 <link href="assets/css/general.css" rel="stylesheet" type="text/css">
 <link href="assets/css/index.css" rel="stylesheet" type="text/css">
+<link href="assets/css/general-media.css" rel="stylesheet" type="text/css">
+<link href="assets/css/index-media.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
