- added type=module to general.js for the correct building using vite - ignore dist file in the gitignore

--- a/index.html
+++ b/index.html
@@ -189,6 +189,6 @@
    <footer>
 		<p>Made with <i class="fa fa-heart"></i> by Olga Ortiz</p>
    </footer>
-   <script src="assets/js/general.js"></script>
+   <script type="module" src="assets/js/general.js"></script>
 </body>
 </html>
