--- a/weight_converter.html
+++ b/weight_converter.html
@@ -230,7 +230,7 @@
         </div>
         <p class="singular-page">Made with <i class="fa fa-heart"></i> by Olga Ortiz</p>
     </footer>
-    <script src="assets/js/general.js"></script>
+    <script type="module" src="assets/js/general.js"></script>
     <script type="module" src="assets/js/converter.js"></script>
 </body>
 </html>
